add pasta utils

--- a/app/pytest.ini
+++ b/app/pytest.ini
@@ -1,6 +1,6 @@
 [pytest]
 
-addopts =  -v --cov=veiculo_de_aluguel tests/ --cov-report term-missing
+addopts =  -v --cov=utils tests/ --cov-report term-missing
 
 markers =
     metodos_veiculo: Teste dos métodos de veiculo
